
2007-03-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: capture.c, job.h, gnome_options.c, options.c:
		fix for bug # 1651517

2007-03-21  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ffmpeg, ffmpeg-8195, ffmpeg-8133: updated ffmpeg to
		rev 8195 to fix bug # 1656899
	* src/app_data.c: fixes a segfault when running without
		any window manager

2007-03-16  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, src/xtoxwd.c: better fix for bug # 1680765
	* src/app_data.c: fix for bug # 1681107
	* src/capture.c: cosmetics
	* ppm2mpeg.sh: remove tracing

2007-03-15  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for bug # 1669717
	* src/xtoxwd.c: fix for bug # 1680765
	* ppm2mpeg.sh: fix passing of frame rate to ffmpeg

2007-03-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/codecs.c: fix for bug # 1679545

2007-03-04  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian x-lation

2007-02-28  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ppm2mpeg.sh: fix for mutable filenames with '.' right
		after the '%' of the format specifier.
	* ffmpeg, ffmpeg-svn6791, ffmpeg-svn8133, configure.in,
		src/xtoffmpeg.c: libav* version bump
	* src/xtoffmpeg.c: fix bug # 1584093 on the xvidcap side
		(adding a trellis quantiser to ffmpeg is beyond my
		skill and time at hand)
	* src/capture.c: fixed XDamage stuff that was completely 
		broken for anything but 32bit RGBA
	* src/app_data.c: fixed animate command for mutable filenames
		that have a '.' right after the '%' of the format
		specifier.

2007-02-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: change gtk+ dependency from 2.4 to 2.5 because
		of references to stock items not present before

2007-02-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for bug # 1656983

2007-02-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: codecs.c, codecs.h, gnome_ui.c, capture.c, capture.h, 
		app_data.c, job.c, app_data.h, job.h, gnome_options.c, 